[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/audio-controls/mute.png" type="Texture" id=1]
[ext_resource path="res://assets/audio-controls/tick.png" type="Texture" id=2]
[ext_resource path="res://assets/audio-controls/full.png" type="Texture" id=3]
[ext_resource path="res://assets/audio-controls/slider_empty.tres" type="StyleBox" id=4]
[ext_resource path="res://assets/audio-controls/slider_full.tres" type="StyleBox" id=5]
[ext_resource path="res://assets/audio-controls/audiocontrol.gd" type="Script" id=7]
[ext_resource path="res://assets/font/RussoOne-Regular.ttf" type="DynamicFontData" id=8]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 8 )

[node name="audiocontrol" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="title" type="RichTextLabel" parent="."]
margin_right = 1024.0
margin_bottom = 20.0
rect_min_size = Vector2( 0, 20 )
custom_fonts/normal_font = SubResource( 1 )
bbcode_text = "Muzac"
text = "Muzac"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_top = 24.0
margin_right = 1024.0
margin_bottom = 94.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btnMute" type="Button" parent="HBoxContainer"]
margin_right = 76.0
margin_bottom = 70.0
icon = ExtResource( 1 )

[node name="slider" type="HSlider" parent="HBoxContainer"]
margin_left = 80.0
margin_right = 944.0
margin_bottom = 70.0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_icons/grabber_disabled = ExtResource( 2 )
custom_icons/grabber_highlight = ExtResource( 2 )
custom_icons/grabber = ExtResource( 2 )
custom_styles/slider = ExtResource( 4 )
custom_styles/grabber_area_highlight = ExtResource( 5 )
custom_styles/grabber_area = ExtResource( 5 )
max_value = 1.0
step = 0.05
value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btnfull" type="Button" parent="HBoxContainer"]
margin_left = 948.0
margin_right = 1024.0
margin_bottom = 70.0
icon = ExtResource( 3 )
[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
[connection signal="focus_entered" from="HBoxContainer" to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="HBoxContainer" to="." method="_on_focus_exited"]
[connection signal="focus_entered" from="HBoxContainer/btnMute" to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="HBoxContainer/btnMute" to="." method="_on_focus_exited"]
[connection signal="pressed" from="HBoxContainer/btnMute" to="." method="_on_btnMute_pressed"]
[connection signal="focus_entered" from="HBoxContainer/slider" to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="HBoxContainer/slider" to="." method="_on_focus_exited"]
[connection signal="value_changed" from="HBoxContainer/slider" to="." method="_on_slider_value_changed"]
[connection signal="focus_entered" from="HBoxContainer/btnfull" to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="HBoxContainer/btnfull" to="." method="_on_focus_exited"]
[connection signal="pressed" from="HBoxContainer/btnfull" to="." method="_on_btnfull_pressed"]
